write unit tests and integrating tests